--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,6 @@
     <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <app-component>Loading...</app-component>
   </body>
 </html>
